Se factoriza el codigo